--- a/modules/Layout/SubscribeForm/SubscribeForm.module.scss
+++ b/modules/Layout/SubscribeForm/SubscribeForm.module.scss
@@ -13,7 +13,6 @@
         position: relative;
         max-width: 926px;
         margin-bottom: -$spacing-9;
-        z-index: 2;
         border: 1px solid $color-base-200;
     }
 }
